--- a/src/scss/_shared.scss
+++ b/src/scss/_shared.scss
@@ -11,7 +11,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   height: 94.5px;
   background: c.$pri_white;
   padding: 30px 0;
