--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -12,7 +12,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   height: 94.5px;
   background: c.$pri_white;
   padding: 30px 0;
@@ -83,6 +83,240 @@ body {
   position: absolute;
   top: 600px;
   z-index: 1;
+}
+
+#about-hero-container {
+  margin-top: 110px;
+}
+
+.about-hero {
+  position: relative;
+  width: 90%;
+  height: auto;
+  max-width: 1400px;
+  margin-inline: auto;
+  @include c.flex;
+  background: c.$pri_peach;
+  padding-left: 50px;
+  border-radius: 12px;
+  z-index: 3;
+  overflow: hidden;
+
+  &-oval {
+    position: absolute;
+    left: -5%;
+    top: -40%;
+    width: 60%;
+    z-index: 2;
+
+    & img {
+      width: 100%;
+    }
+  }
+
+  &-contents {
+    position: relative;
+    color: c.$pri_white;
+    width: 80%;
+    margin-right: 80px;
+    z-index: 3;
+
+    & .about-hero-header {
+      font-size: map-get(c.$font-sizes, H1);
+      margin-bottom: 20px;
+    }
+  }
+
+  &-img {
+    position: relative;
+    width: 80%;
+    height: 470px;
+    background-image: url('../../assets/about/desktop/image-about-hero.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    z-index: 3;
+  }
+}
+
+#talent-container {
+  margin-top: 120px;
+}
+
+.talent {
+  position: relative;
+  width: 90%;
+  height: auto;
+  max-width: 1400px;
+  margin-inline: auto;
+  @include c.flex;
+  background: c.$core-bg;
+  padding-right: 50px;
+  border-radius: 12px;
+  z-index: 3;
+  overflow: hidden;
+
+  &-img {
+    position: relative;
+    width: 80%;
+    height: 640px;
+    background-image: url('../../assets/about/desktop/image-world-class-talent.jpg');
+    background-position: center;
+    background-size: cover;
+    z-index: 3;
+  }
+
+  &-contents {
+    position: relative;
+    color: c.$pri_black;
+    width: 80%;
+    margin-left: 80px;
+    z-index: 3;
+
+    & .talent-header {
+      font-size: map-get(c.$font-sizes, H2);
+      margin-bottom: 20px;
+      color: c.$pri_peach;
+    }
+
+    & .talent-copy {
+      & span {
+        display: block;
+        margin-top: 20px;
+      }
+    }
+  }
+
+  &-pattern {
+    position: absolute;
+    right: 10%;
+    bottom: -3%;
+    width: 60%;
+    z-index: 2;
+
+    & img {
+      width: 100%;
+    }
+  }
+}
+
+#locations-choice-container {
+  margin-top: 120px;
+}
+
+.locations-choice {
+  position: relative;
+  width: 90%;
+  height: auto;
+  max-width: 1400px;
+  margin-inline: auto;
+  @include c.flex;
+  flex-wrap: wrap;
+  z-index: 3;
+}
+
+.location-choice {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+
+  &-img {
+    position: relative;
+    width: 202px;
+    margin-bottom: 40px;
+
+    & .location-pattern {
+      position: absolute;
+      top: 0;
+      right: 0;
+      z-index: 3;
+      width: 100%;
+
+      &.pattern-1 {
+        transform: rotate(90deg);
+      }
+
+      &.pattern-3 {
+        transform: rotate(-90deg);
+      }
+    }
+  }
+
+  &-content {
+    & .location-name {
+      text-transform: uppercase;
+      font-size: map-get(c.$font-sizes, H2);
+      letter-spacing: 5px;
+      margin-bottom: 20px;
+    }
+
+    & a {
+      @include c.button_on_light;
+    }
+  }
+}
+
+#deal-container {
+  margin-top: 120px;
+}
+
+.deal {
+  position: relative;
+  width: 90%;
+  height: auto;
+  max-width: 1400px;
+  margin-inline: auto;
+  @include c.flex;
+  background: c.$core-bg;
+  padding-left: 50px;
+  border-radius: 12px;
+  z-index: 3;
+  overflow: hidden;
+
+  &-contents {
+    position: relative;
+    color: c.$pri_black;
+    width: 80%;
+    margin-right: 80px;
+    z-index: 3;
+
+    & .deal-header {
+      font-size: map-get(c.$font-sizes, H2);
+      margin-bottom: 20px;
+      color: c.$pri_peach;
+    }
+
+    & .deal-copy {
+      & span {
+        display: block;
+        margin-top: 20px;
+      }
+    }
+  }
+
+  &-img {
+    position: relative;
+    width: 80%;
+    height: 640px;
+    background-image: url('../../assets/about/desktop/image-real-deal.jpg');
+    background-position: center;
+    background-size: cover;
+    z-index: 3;
+  }
+
+  &-pattern {
+    position: absolute;
+    right: 10%;
+    bottom: -3%;
+    width: 60%;
+    z-index: 2;
+
+    & img {
+      width: 100%;
+    }
+  }
 }
 
 #cta-container {
@@ -264,239 +498,6 @@ footer {
       &:hover {
         background: c.$sec_light-peach;
       }
-    }
-  }
-}
-
-#about-hero-container {
-  margin-top: 110px;
-}
-
-.about-hero {
-  position: relative;
-  width: 90%;
-  height: auto;
-  max-width: 1400px;
-  margin-inline: auto;
-  @include c.flex;
-  background: c.$pri_peach;
-  padding-left: 50px;
-  border-radius: 12px;
-  z-index: 3;
-  overflow: hidden;
-
-  &-oval {
-    position: absolute;
-    left: -5%;
-    top: -40%;
-    width: 60%;
-    z-index: 2;
-
-    & img {
-      width: 100%;
-    }
-  }
-
-  &-contents {
-    position: relative;
-    color: c.$pri_white;
-    width: 80%;
-    margin-right: 80px;
-    z-index: 3;
-
-    & .about-hero-header {
-      font-size: map-get(c.$font-sizes, H1);
-      margin-bottom: 20px;
-    }
-  }
-
-  &-img {
-    position: relative;
-    width: 80%;
-    height: 470px;
-    background-image: url('../../assets/about/desktop/image-about-hero.jpg');
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    z-index: 3;
-  }
-}
-
-#talent-container {
-  margin-top: 120px;
-}
-
-.talent {
-  position: relative;
-  width: 90%;
-  height: auto;
-  max-width: 1400px;
-  margin-inline: auto;
-  @include c.flex;
-  background: c.$core-bg;
-  padding-right: 50px;
-  border-radius: 12px;
-  z-index: 3;
-  overflow: hidden;
-
-  &-img {
-    position: relative;
-    width: 80%;
-    height: 640px;
-    background-image: url('../../assets/about/desktop/image-world-class-talent.jpg');
-    background-position: center;
-    background-size: cover;
-    z-index: 3;
-  }
-
-  &-contents {
-    position: relative;
-    color: c.$pri_black;
-    width: 80%;
-    margin-left: 80px;
-    z-index: 3;
-
-    & .talent-header {
-      font-size: map-get(c.$font-sizes, H2);
-      margin-bottom: 20px;
-      color: c.$pri_peach;
-    }
-
-    & .talent-copy {
-      & span {
-        display: block;
-        margin-top: 20px;
-      }
-    }
-  }
-
-  &-pattern {
-    position: absolute;
-    right: 10%;
-    bottom: -3%;
-    width: 60%;
-    z-index: 2;
-
-    & img {
-      width: 100%;
-    }
-  }
-}
-
-#locations-choice-container {
-  margin-top: 120px;
-}
-
-.locations-choice {
-  position: relative;
-  width: 90%;
-  height: auto;
-  max-width: 1400px;
-  margin-inline: auto;
-  @include c.flex;
-  z-index: 3;
-}
-
-.location-choice {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-
-  &-img {
-    position: relative;
-    width: 202px;
-    margin-bottom: 40px;
-
-    & .location-pattern {
-      position: absolute;
-      top: 0;
-      right: 0;
-      z-index: 3;
-      width: 100%;
-
-      &.pattern-1 {
-        transform: rotate(90deg);
-      }
-
-      &.pattern-3 {
-        transform: rotate(-90deg);
-      }
-    }
-  }
-
-  &-content {
-    & .location-name {
-      text-transform: uppercase;
-      font-size: map-get(c.$font-sizes, H2);
-      letter-spacing: 5px;
-      margin-bottom: 20px;
-    }
-
-    & a {
-      @include c.button_on_light;
-    }
-  }
-}
-
-#deal-container {
-  margin-top: 120px;
-}
-
-.deal {
-  position: relative;
-  width: 90%;
-  height: auto;
-  max-width: 1400px;
-  margin-inline: auto;
-  @include c.flex;
-  background: c.$core-bg;
-  padding-left: 50px;
-  border-radius: 12px;
-  z-index: 3;
-  overflow: hidden;
-
-  &-contents {
-    position: relative;
-    color: c.$pri_black;
-    width: 80%;
-    margin-right: 80px;
-    z-index: 3;
-
-    & .deal-header {
-      font-size: map-get(c.$font-sizes, H2);
-      margin-bottom: 20px;
-      color: c.$pri_peach;
-    }
-
-    & .deal-copy {
-      & span {
-        display: block;
-        margin-top: 20px;
-      }
-    }
-  }
-
-  &-img {
-    position: relative;
-    width: 80%;
-    height: 640px;
-    background-image: url('../../assets/about/desktop/image-real-deal.jpg');
-    background-position: center;
-    background-size: cover;
-    z-index: 3;
-  }
-
-  &-pattern {
-    position: absolute;
-    right: 10%;
-    bottom: -3%;
-    width: 60%;
-    z-index: 2;
-
-    & img {
-      width: 100%;
     }
   }
 }
