--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -1,7 +1,13 @@
 @use 'config' as c;
 @import 'reset';
 
+html {
+  position: relative;
+  overflow-x: hidden;
+}
+
 body {
+  position: relative;
   font-family: c.$font-family;
   background: c.$pri_white;
   overflow-x: hidden;
@@ -16,12 +22,12 @@ section {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   height: 94.5px;
   background: c.$pri_white;
   padding: 30px 0;
   z-index: 10;
-  border-bottom: 2px solid red;
+  border-bottom: 1px solid c.$pri_black;
 }
 
 .header {
@@ -79,195 +85,6 @@ section {
     & i {
       font-size: 30px;
       cursor: pointer;
-    }
-  }
-}
-
-.bg-pattern.pattern-1 {
-  position: absolute;
-  top: 600px;
-  z-index: 1;
-}
-
-#cta-container {
-  position: relative;
-  width: 90%;
-  max-width: 1400px;
-  margin-inline: auto;
-  margin-top: 50px;
-  transform: translateY(70px);
-  z-index: 4;
-  overflow: hidden;
-}
-
-.cta-pattern {
-  position: absolute;
-  right: 0;
-  top: -50%;
-  z-index: 3;
-}
-
-.cta {
-  @include c.flex;
-  background: c.$pri_peach;
-  border-radius: 12px;
-  padding: 70px 70px;
-
-  &-content {
-    position: relative;
-    width: 40%;
-    color: c.$pri_white;
-    z-index: 4;
-
-    &-header {
-      font-size: map-get(c.$font-sizes, H2);
-      font-weight: c.$font-weight_medium;
-      line-height: 1;
-      margin-bottom: 20px;
-    }
-
-    &-copy {
-      font-size: map-get(c.$font-sizes, body);
-    }
-  }
-
-  &-btn {
-    position: relative;
-    z-index: 4;
-    & a {
-      @include c.button_on_dark;
-    }
-  }
-}
-
-footer {
-  position: relative;
-  background: c.$pri_black;
-  color: c.$pri_white;
-  padding: 130px 0px 40px;
-  z-index: 3;
-  width: 100vw;
-}
-
-.footer {
-  width: 90%;
-  max-width: 1400px;
-  margin-inline: auto;
-}
-
-.footer-top {
-  @include c.flex;
-  align-items: flex-start;
-  border-bottom: 1px solid c.$footer-border;
-  padding-bottom: 30px;
-
-  &-logo {
-    width: 157px;
-
-    & img {
-      width: 100%;
-    }
-  }
-
-  &-links-container .links {
-    @include c.flex;
-
-    & .link {
-      &:not(:last-child) {
-        margin-right: 25px;
-      }
-
-      & a {
-        position: relative;
-        font-size: map-get(c.$font-sizes, links);
-        text-transform: uppercase;
-        letter-spacing: 2px;
-        color: c.$pri_white;
-
-        &:after {
-          content: '';
-          position: absolute;
-          bottom: 0;
-          left: 0;
-          width: 0;
-          height: 1px;
-          background: c.$sec_dark-grey;
-          @include c.transition;
-        }
-
-        &:hover {
-          &:after {
-            width: 100%;
-          }
-        }
-      }
-    }
-  }
-}
-
-.footer-bottom {
-  @include c.flex;
-  align-items: flex-end;
-  margin-top: 30px;
-
-  &-content {
-    @include c.flex;
-    font-size: map-get(c.$font-sizes, body);
-
-    & .address {
-      color: c.$footer-border;
-      font-weight: c.$font-weight_bold;
-      margin-right: 100px;
-      & span {
-        display: block;
-        font-weight: c.$font-weight_regular;
-      }
-    }
-
-    & .contact {
-      color: c.$footer-border;
-      font-weight: c.$font-weight_bold;
-      & span {
-        display: block;
-      }
-    }
-  }
-}
-
-.footer-bottom-socials {
-  @include c.flex;
-
-  & i {
-    font-size: 20px;
-    color: c.$pri_peach;
-    cursor: pointer;
-    @include c.transition;
-
-    &:hover {
-      color: c.$sec_light-peach;
-    }
-
-    &:not(:last-child) {
-      margin-right: 10px;
-    }
-
-    &.fa-youtube-play {
-      font-size: 13px;
-      color: c.$pri_black;
-      background: c.$pri_peach;
-      border-radius: 50%;
-      width: 17px;
-      height: 17px;
-      line-height: 17px;
-      padding: 10px;
-      text-align: center;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-
-      &:hover {
-        background: c.$sec_light-peach;
-      }
     }
   }
 }
@@ -399,6 +216,7 @@ footer {
   max-width: 1400px;
   margin-inline: auto;
   @include c.flex;
+  flex-wrap: wrap;
   z-index: 3;
 }
 
@@ -445,11 +263,191 @@ footer {
   }
 }
 
-.bg-pattern {
+#cta-container {
+  position: relative;
+  width: 90%;
+  max-width: 1400px;
+  margin-inline: auto;
+  margin-top: 50px;
+  transform: translateY(70px);
+  z-index: 4;
+  overflow: hidden;
+}
+
+.cta-pattern {
   position: absolute;
+  right: 0;
+  top: -50%;
+  z-index: 3;
+}
+
+.cta {
+  @include c.flex;
+  background: c.$pri_peach;
+  border-radius: 12px;
+  padding: 70px 70px;
+
+  &-content {
+    position: relative;
+    width: 40%;
+    color: c.$pri_white;
+    z-index: 4;
+
+    &-header {
+      font-size: map-get(c.$font-sizes, H2);
+      font-weight: c.$font-weight_medium;
+      line-height: 1;
+      margin-bottom: 20px;
+    }
+
+    &-copy {
+      font-size: map-get(c.$font-sizes, body);
+    }
+  }
+
+  &-btn {
+    position: relative;
+    z-index: 4;
+    & a {
+      @include c.button_on_dark;
+    }
+  }
+}
+
+footer {
+  position: relative;
+  background: c.$pri_black;
+  color: c.$pri_white;
+  padding: 130px 0px 40px;
+  z-index: 3;
+  height: auto;
+}
+
+.footer {
+  width: 90%;
+  max-width: 1400px;
+  margin-inline: auto;
+}
+
+.footer-top {
+  @include c.flex;
+  align-items: flex-start;
+  border-bottom: 1px solid c.$footer-border;
+  padding-bottom: 30px;
+
+  &-logo {
+    width: 157px;
+
+    & img {
+      width: 100%;
+    }
+  }
+
+  &-links-container .links {
+    @include c.flex;
+
+    & .link {
+      &:not(:last-child) {
+        margin-right: 25px;
+      }
+
+      & a {
+        position: relative;
+        font-size: map-get(c.$font-sizes, links);
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        color: c.$pri_white;
+
+        &:after {
+          content: '';
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          width: 0;
+          height: 1px;
+          background: c.$sec_dark-grey;
+          @include c.transition;
+        }
+
+        &:hover {
+          &:after {
+            width: 100%;
+          }
+        }
+      }
+    }
+  }
+}
+
+.footer-bottom {
+  @include c.flex;
+  align-items: flex-end;
+  margin-top: 30px;
+
+  &-content {
+    @include c.flex;
+    font-size: map-get(c.$font-sizes, body);
+
+    & .address {
+      color: c.$footer-border;
+      font-weight: c.$font-weight_bold;
+      margin-right: 100px;
+      & span {
+        display: block;
+        font-weight: c.$font-weight_regular;
+      }
+    }
+
+    & .contact {
+      color: c.$footer-border;
+      font-weight: c.$font-weight_bold;
+      & span {
+        display: block;
+      }
+    }
+  }
+}
+
+.footer-bottom-socials {
+  @include c.flex;
+
+  & i {
+    font-size: 20px;
+    color: c.$pri_peach;
+    cursor: pointer;
+    @include c.transition;
+
+    &:hover {
+      color: c.$sec_light-peach;
+    }
+
+    &:not(:last-child) {
+      margin-right: 10px;
+    }
+
+    &.fa-youtube-play {
+      font-size: 13px;
+      color: c.$pri_black;
+      background: c.$pri_peach;
+      border-radius: 50%;
+      width: 17px;
+      height: 17px;
+      line-height: 17px;
+      padding: 10px;
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      &:hover {
+        background: c.$sec_light-peach;
+      }
+    }
+  }
 }
 
 .bg-pattern.pattern-2 {
+  position: absolute;
   bottom: 5%;
   right: -30%;
 }
